almost finished with home page. missing footer alignment, icons for .what-i-do and better positioning. also fixing dropdown menu

--- a/source/stylesheets/config/_bootstrap_variables.scss
+++ b/source/stylesheets/config/_bootstrap_variables.scss
@@ -11,8 +11,8 @@ $font-size-base: 18px;
 
 // Colors
 $gray-base:       $gray;
-$brand-primary:   $blue;
-$brand-success:   $green;
+$brand-primary:   white;
+$brand-success:   #870058;
 $brand-info:      $yellow;
 $brand-danger:    $red;
 $brand-warning:   $orange;
