--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -8,3 +8,5 @@ $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
 $light-gray: #F4F4F4;
+$pink: #870058;
+$light-blue: #d7fdf0;
