--- a/source/stylesheets/pages/_index.scss
+++ b/source/stylesheets/pages/_index.scss
@@ -1,3 +1,7 @@
+body{
+  background: rgb(250, 250, 250);
+}
+
 // Import page-specific CSS files here.
 @import "home";
 @import "about";
